Deployment_Project/force-app/main/default/objects/Work_Location__c/Work_Location__c.object-meta.xml
<CustomObject>
    <description>This object stores all the locations of an organization.</description>
    <label>Work Location</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Work Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>