Deployment_Project/force-app/main/default/objects/Work_Location__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>This field indicates the city.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>