Deployment_Project/force-app/main/default/objects/Work_Location__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <inlineHelpText>Choose your belonging state.</inlineHelpText>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>UP</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>Rajasthan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>