Deployment_Project/force-app/main/default/objects/Work_Location__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>This field indicates the street.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Street</label>
    <length>40</length>
    <type>Text</type>
</CustomField>