Deployment_Project/force-app/main/default/objects/Work_Location__c/validationRules/Check_Zip_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Zip_Code</fullName>
    <active>true</active>
    <description>This rule checks whether the zip code is 5 digits or not and from 0-9.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(ZipCode__c)),
    OR(
         LEN(  TEXT(ZipCode__c)) != 5,
         NOT(REGEX( TEXT( ZipCode__c), &quot;\\d{5}&quot;)) 
    )
)</errorConditionFormula>
    <errorMessage>Zip Code must be in 5-digit format (0-9).</errorMessage>
</ValidationRule>